# joker-web-app

./: .eslintignore  .eslintrc.json  .gitignore  .pnp.cjs  .pre-commit-config.yaml  .prettierignore  README.md  docker-compose.yml  package.json  pyproject.toml
.circleci/: config.yml
.github/workflows/: codeql.yml  npm-publish-github-packages.yml
.husky/: pre-commit
client/: .pnp.cjs  .yarnrc.yml  Dockerfile  babel.config.cjs  config-overrides.js  jest.config.js  package.json
client/public/: index.html  result.html  ww.avif  ww5.avif
client/src/: App.css  axios.js  index.js  index.test.js
client/src/components/: TestReport.js  TestRunModal.js  TestRunResults.js
client/src/helpers/: ErrorBoundary.js  Logger.js
nginx/: Dockerfile  nginx.conf
server/: *.env  .dockerignore  .pnp.cjs  Dockerfile  package.json  pyproject.toml  server.js
server/controllers/: suiteController.js  testController.js  testReportController.js  testRunsController.js
server/helpers/: connections.js
server/models/: suite.js  test.js  testReport.js  testRuns.js
server/routes/: suitesRoutes.js  testRunsRoutes.js
server/src/: app.py  config.py  wsgi.py
server/src/common/: base_model.py  encoders.py  resources.py
server/src/teststeps/: __init__.py  test_steps.py  test_steps_controller.py  test_steps_exceptions.py  test_steps_factory.py  test_steps_model.py  test_steps_repo.py  test_steps_service.py
server/tests/test_steps/: test_ts.py  test_ts_factory.py  test_ts_model.py
server/utils/: Logger.js
utils/: .pnp.cjs  package.json
utils/src/: Logger.js
(+27 files in other folders)
